# insurance-api

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: api.py  config.py  kafka_logger.py  main.py
app/insurance/: utils.py  views.py
app/tariff/: models.py  service.py  views.py
migrations/: env.py
migrations/versions/: 2024-12-01_798cced5a684.py
